Öffnende Gruppierung entfernt
Die öffnende geschwungene Klammer (Beginn einer TeX‐Gruppierung) war zu
viel.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1900 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1273,7 +1273,7 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
   alle $G\subset X$ das Komplement $G^{c}=X\setminus G$ auch endlich und jedes
   $G\subset X$ ist offen. Also ist in dem Fall $\CT$ die diskrete Topologie.
  \item Wir suchen ein Beispiel für einen topologischen Raum $(X,\CT)$ und
-  $\{A_{i}\}_{i\in I}\subset\FP(X)$, so dass ${\mathring{\bigcap_{i\in I}
+  $\{A_{i}\}_{i\in I}\subset\FP(X)$, so dass $\mathring{\bigcap_{i\in I}
   A_{i}}\subsetneq \bigcap_{i\in I} \mathring{A}_{i}$. Wir setzen
   $X=\R$ mit gewöhnlicher Topologie,
   $A_{n}\colon=\{x\in\R\colon-\nicefrac{1}{n} <x\}$. Dann
