--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1127,7 +1127,7 @@ auszuschließen, führt man zusätzlich folgende Axiome ein:
   zusammenhängend. Daraus folgt $(X', \CT')$ zusammenhängend.
 \end{uebung}
 
-\section{Zusammenhängende Teilmengen von $(X,\CT)$}
+\section{Zusammenhängende Teilmengen von \texorpdfstring{$(X,\CT)$}{(X,T)}}
 
 \begin{defini}[Zusammenhängende Menge]\label{def:42}
   Es heißt, $A\subset X$ \highl{zusammenhängend}, falls $(A, \CT|_{A})$
