--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1274,7 +1274,7 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
   $G\subset X$ ist offen. Also ist in dem Fall $\CT$ die diskrete Topologie.
  \item Wir suchen ein Beispiel für einen topologischen Raum $(X,\CT)$ und
   $\{A_{i}\}_{i\in I}\subset\FP(X)$, so dass $\mathring{\bigcap_{i\in I}
-  A_{i}}\subsetneq \bigcap_{i\in I} \mathring{A}_{i}$. Wir setzen
+  A_{i}}\subsetneq \bigcap_{i\in I} \mathring{A_{i}}$. Wir setzen
   $X=\R$ mit gewöhnlicher Topologie,
   $A_{n}\colon=\{x\in\R\colon-\nicefrac{1}{n} <x\}$. Dann
   ${\mathring{A}}_{n}=A_{n}$ für alle $n$ und es folgt,
