--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -1597,7 +1597,7 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
       gleichmäßig stetig).
 
       Die Aussagen des Satzes folgen sofort aus den Eigenschaften von
-      $\ell^{n}_{\infty}$\foonote{Wir wissen, dass $\ell^{n}_{\infty}$ ein Banachraum
+      $\ell^{n}_{\infty}$\footnote{Wir wissen, dass $\ell^{n}_{\infty}$ ein Banachraum
       ist und eine Menge $K\subset\ell^{n}_{\infty}$ ist genau dann kompakt,
       wenn $K$ abgeschlossen und beschränkt ist.} sowie den Eigenschaften von
       $T$ und $T^{-1}$. Nach \autoref{satz:i.213} gilt, $K\subset X$ ist genau
