- Uebung vom 2008-11-18 - TODO entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1912 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -186,6 +186,7 @@
 \newcommand*{\CT}{\mathcal{T}}
 \newcommand*{\CS}{\mathcal{S}}
 \newcommand*{\FP}{\mathfrak{P}}
+\newcommand*{\FS}{\mathfrak{S}}
 
 \makeindex
 
@@ -608,8 +609,7 @@ zur nächsten:
 \begin{lem}\label{lem:23}
   Sei $B$ ein System von Teilmengen von $X$.
   \begin{enumerate}[(1)]
-   \item $\forall x\in X\,\exists B_{X}\in B$\todo{ist das ein $\in$ oder
-    $\subset$?} mit $X\in B_{X}$.
+   \item $\forall x\in X\,\exists B_{X}\in B$ mit $x\in B_{X}$.
    \item Seien $B_{1}, B_{2}\in B$ und $x\in B$ sowie $x\in B_{1}\cap B_{2}$.
    Damit existiert ein  $B_{X}\in B$ mit $x\in B_{X}$ und $B_{X}\subseteq B_{1}\cap B_{2}$. Dann
     ist $B$ Basis einer Topologie mit $\CT(B)\colon=\{\emptyset\}\cup
@@ -1360,7 +1360,7 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
 
 \begin{bemerk}
   Man sagt, $(X,\CT)$ erfüllt das erste Abzählbarkeitsaxiom, falls es zu jedem
-  $x\in X$eine abzählbare Umgebungsbasis gibt.
+  $x\in X$ eine abzählbare Umgebungsbasis gibt.
 \end{bemerk}
 
 \section{Serie 2: Vergleich von Topologien, Basen, Abzählbarkeit, Stetige
@@ -1371,14 +1371,53 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
   stetig}\}$ kann man z.\,B. die $\sup$"~Norm $\norm{f}_{\infty}=\sup_{x\in
   [0,1]} \abs{f(x)}$ oder die $L_{1}$"~Norm $\norm{f}_{1}= \int_{0}^{1}
   \abs{f(x)}\,dx$ betrachten. Seien nun $\CT_{\infty}$ und $\CT_{1}$ die
-  jeweils erzeugten Topologien auf $\CC([0,1])$. Welche der beiden ist feiner?
+  jeweils erzeugten Topologien auf $\CC([0,1])$. Welche der beiden ist feiner?\\
+  Sei $M\in\CT_{1}\Leftrightarrow\forall f\in M\,\exists\epsilon>0\colon
+  B^{1}_{\epsilon}(f)\subseteq M$. Sei $g\in
+  B^{\infty}_{\epsilon}(f)\Rightarrow \epsilon>\norm{f-g}_{\infty}= \sup\abs{f
+  -g} = \int_{0}^{1} \sup\abs{f-g}\,dx\geq \int_{0}^{1} \abs{f-g}\,dx=
+  \norm{f-g}_{1}\Rightarrow B^{\infty}_{\epsilon}(f)\subseteq
+  B^{1}_{\epsilon}(f)\subseteq M\Rightarrow\CT_{1}\prec\CT_{\infty}$.
+  Weiterhin ist $\CT_{\infty} \nprec\CT_{1}$. Denn
+  $B^{\infty}_{\nicefrac{1}{2}}(0)$ ist nicht in $\CT_{1}$. Dazu sei
+  $B^{1}_{\epsilon}(0)$ eine beliebig kleine 1"~Kugel. Dann betrachten wir
+  $f_{\epsilon}(x)=
+  \begin{cases}
+    1-\nicefrac{x}{\epsilon}& x<\epsilon\\
+    0 & x\geq\epsilon
+  \end{cases}$. Die Funktion liegt in $B^{1}_{\epsilon}(0)$, aber nicht in
+  $B^{\infty}_{\nicefrac{1}{2}}(0)$.
  \item
   \begin{enumerate}[(a)]
    \item Der topologische Raum, gebildet von $\R$ zusammen mit der von den
     Mengen der Formen $[x,\infty)$ und $(-\infty,x]$ mit $x\in\R$ erzeugten
     Topologie, wird als \highl{\textsc{Sorgenfrey}"~Gerade} bezeichnet-. Man
     zeige, dass $\CB= \{[x,y)\colon x,y\in\R\}$ eine Basis in diesem Raum
-    bildet und dass es darin keine abzählbare Basis geben kann.
+    bildet und dass es darin keine abzählbare Basis geben kann.\\
+    Zunächst ist zu zeigen, dass $\FS\subseteq\CT(\CB)$. Denn dann ist auch
+    $\CT(\FS)\subseteq\CT(\CB)$. Dazu ist $\R\in\CT(\FS)\colon\R=
+    \bigcup_{n=0}^{\infty} [-n,n)$. Weiter ist $[,\infty)\in\CT(\CB)$ mit
+    $x\in\R$. Denn $[x,\infty)= \bigcup_{n=[x]+1}^{\infty} [x,n)\in\CT(\CB)$.
+    Schließlich gilt noch: $(-\infty, x)\in\CT(\CB)$ mit $x\in\R$ nach der
+    obigen Argumentation.
+
+    Nun ist noch $\CB\subseteq\CT(\FS)\Rightarrow \CT(\CB)\subseteq \CT(\FS)$.
+    Für beliebige $x,y\in \R$ und $[x,y)\in\CT$ ist $[x,y)=
+    [x,\infty)\cap(-\infty,y)\in\CT(\CB)$.
+
+    Wegen des \autoref{lem:22} gilt insbesondere für jede Basis $\CB'$ von
+    $\CT$: $\forall[r,r+1)\in\CT\,\exists B_{r}\in\CB'\colon r\in B_{r}\wedge
+    B_{r}\subseteq[r,r+1)\Rightarrow\forall r\in\R\,\exists B_{r}\in\CB'\colon
+    r\in B_{r}\wedge B_{r}\subseteq[r,r+1)\Rightarrow\forall r\in\R\,\exists
+    r\in\CB\colon r=\inf_{x\in B_{r}} B_{r}$. Nun konstruieren wir eine
+    Abbildung $f\colon\R\rightarrow\CB'$ mit $f(r)=B_{r}$. Es ist zu zeigen,
+    dass $f$ injektiv ist. Dazu seien $x,y\in\R$ mit $f(x)=f(y)\Rightarrow
+    B_{x}= B_{y}\Rightarrow x=\inf_{z\in B_{x}}= \inf_{z\in B_{y}}=y$.
+
+    Alternativlösung von Michael Hinz: Es existiert eine Basis $\{\CB_{i}\}$.
+    Dann müsste man haben $[x,y)= \bigcup_{i=1}^{\infty} B_{i}'$. Für
+    beliebige $x,y$ existiert ein $i_{0}\in\N$ mit $x= \min B_{i_{0}}$. Die
+    Menge $\{x\colon x=\min B_{i_{0}}\}$ ist abzählbar. \lightning{}
    \item Sei $n\in\N$ fixiert. Dann heiße $A\subset\C^{n}$ abgeschlossen,
     falls Polynome $\{P_{i}\}_{i\in I}$ existieren, so dass
     \begin{gather*}
@@ -1390,22 +1429,60 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
     Man zeige, dass die so definierten offenen Mengen eine Topologie $\CT_{Z}$
     auf $\C^{n}$ bilden (\highl{\textsc{Zariski}"~Topologie}). Weiter zeige
     man, dass das System $\CB=\{U\subset\C^{n}\colon U^{c} \text{ ist
-    Nullstellenmenge eines Polynoms}\}$ eine Basis derselben ist.
+    Nullstellenmenge eines Polynoms}\}$ eine Basis derselben ist.\\
+    \begin{enumerate}
+     \item Es ist $\emptyset\in\CT_{Z}$, da man das Nullpolynom als Polynom
+      wählen kann. Weiterhin ist $X\in\CT_{Z}$, da man das Einspolynom wählen
+      kann.
+     \item Sei $A_{i}\in\CT_{Z}$ mit $i\in I$, d.\,h. für alle $i$ existiert
+      eine Folge $\{P_{j}\}$ mit $A^{c}=\{z\in\C\colon P_{j}(z)=0\}$. Wir
+      wählen eine Folge. Damit gilt: $\bigcap_{i\in I} A_{i}^{c}=
+      \{z\in\C\colon \forall i\in I\,\forall j\in J_{i}\colon P_{j}(z)=0\}=
+      \{z\in\C\colon \forall j\in\bigcup_{i\in I} J_{i}\colon P_{j}(z)=0\}$.
+     \item Seien $U,V\in\CT_{Z}$. Dann hat man $U=\{z\in\C^{n}\colon
+      P_{i}(z)=0\}^{c}=(\bigcap_{i\in I}\{z\in\C^{n}\colon P_{i}(z)=0\}=^{c}=
+      \bigcup_{i\in I} \{z\in\C^{n}\colon P_{i}(z)=0\}^{c})$. Dann $(U\cap
+      V)^{c}= U^{c}\cup V^{c}= (\bigcap_{i\in I} \{z\in\C^{n}\colon
+      P_{i}(z)=0\}) \cup(\bigcup_{j\in J} \{z\in\C^{n}\colon P_{j}(z)=0\})=
+      \bigcap_{i\in I} (\{z\in\C^{n}\colon P_{i}(z)=0\}\cup \{z\in\C^{n}\colon
+      P_{j}(z)=0\})= \{z\in\C^{n}\colon P_{ij}(z)=0\,(i.j)\in I\times J\}$.
+      Dabei ist $P_{ij}=P_{i}\cdot P_{j}$. Damit folgt, $U\cap V\in\CT_{Z}$.
+    \end{enumerate}
+    Es ist $\CB=\{U\subset\C^{n}\colon U^{c} \text{ Nullstellenemnge eines
+    Polynoms}\}$. Sei $U\in\CT_{Z}$ beliebig. Dann hat man
+    $U^{c}=\{z\in\C^{n}\colon P_{j}(z)=0\}= \bigcap_{i\in I}
+    \{z\in\C^{n}\colon P_{i}(z)=0\}$. Also ist $U= \bigcup_{i\in I}
+    \{z\in\C^{n}\colon P_{i}(z)=0\}^{c}\in\CB$.
   \end{enumerate}
  \item Seien $(X,\CT)$ ein topologischer Raum und $f,g\colon X\rightarrow\R$
   zwei stetige Funktionen.
   \begin{enumerate}[(a)]
-   \item Man überzeuge sich davon, das $[x\in X\colon f(x)=g(x)\}]$
-    abgeschlossen ist.]
+   \item Man überzeuge sich davon, das $\{x\in X\colon f(x)=g(x)\}$
+    abgeschlossen ist.\\
+    Die Aussage ist äquivalent zu $\{x\in X\colon f(x)\neq g(x)\}$ offen. Es
+    ist $\{f(x)\neq g(x)\}= \{f(x)>g(x)\}\cup\{f(x)<g(x)\}$. Dabei ist
+    $\{f(x)>g(x)\}= \bigcup_{r\in\Q} \{f(x)>r\}\cap\{r>g(x)\}$. Diese beiden
+    Mengen sind in $\CT$, denn $(r,\infty)$ ist offen in $\R$ und wegen der
+    Stetigkeit ist $f^{-1}((r,\infty))\in\CT$. Damit folgt die Aussage.
    \item Man schließe daraus: Falls $f(x)=g(x)$ für alle $x$ aus einer dichten
-    Teilmenge $D$ von $X$, so gilt $f(x)=g(x)$ für alle $x\in X$.
+    Teilmenge $D$ von $X$, so gilt $f(x)=g(x)$ für alle $x\in X$.\\
+    Es ist $\overline{\{x\in X\colon f(x)=g(x)\}}=X$ wegen $\overline{X}=X$.
   \end{enumerate}
  \item Folgende Aussagen sind zu beweisen:
   \begin{enumerate}[(a)]
    \item Erfüllt ein topologischer Raum das zweite Abzählbarkeitsaxiom, so
-    auch das erste.
+    auch das erste.\\
+    Sei $\{B_{i}\}_{i\in \N}$ eine abzählbare Basis und $x\in X$ beliebig. Wir
+    definieren $J\colon=\{i\in\N\colon x\in B_{i}\}$. Dann ist
+    $\{B_{i}\}_{i\in J}$ Umgebungsbasis.
    \item Eine überabzählbare Menge $X$, versehen mit der diskreten Topologie,
-    erfüllt das erste Abzählbarkeitsaxiom, aber nicht das zweite.
+    erfüllt das erste Abzählbarkeitsaxiom, aber nicht das zweite.\\
+    Sei $X\in X$. Dann ist $\{x\}$ eine offene Umgebung von $x$ und
+    $\{\{x\}\}$ ist Umgebungsbasis.
+
+    Zu jeder Umgebung $V$ von $x$ muss ein $U\in\CB$ mit $U\subset\CB$
+    existieren. Dann muss aber auch $\{\{x\}\colon x\in X\}$ in der Basis
+    enthalten sein. Dies ist aber überabzählbar.
    \item Eine überabzählbare Menge $X$, versehen mit der cofiniten Topologie,
     ist ein separabler topologischer Raum, erfüllt aber nicht das zweite
     Abzählbarkeitsaxiom.
@@ -1413,7 +1490,13 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
     Dieser Raum ist \emph{nicht metrisierbar}, d.\,h. es kann keine Metrik auf
     $X$ geben, welche die cofinite Topologie induziert. Sonst hätte man
     nämlich einen separablen metrischen Raum und das zweite
-    Abzählbarkeitsaxiom müsste gelten.
+    Abzählbarkeitsaxiom müsste gelten.\\
+    Sei $A\subset X$ beliebig abzählbar unendlich. Wenn nun $\overline{A}^{c}$
+    offen ist, dann ist es entweder die leere Menge oder $\overline{A}$ ist
+    endlich. Es ist aber $\overline{A}$ auf jeden Fall unendlich. Somit ist
+    $\overline{A}^{c}=\emptyset$ und $\overline{A}=X$.
+
+    \todo{in der naechsten Uebung forsetzen}
   \end{enumerate}
  \item
   \begin{enumerate}[(a)]
