- fakt und \Z kommentiert - \help auf todonotes.sty umgestellt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1914 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -115,7 +115,6 @@
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
 \newtheorem{bemerk}{Bemerkung}
 
 % \theoremheaderfont{\global\hasprooftrue\scshape}
@@ -147,16 +146,13 @@
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
-\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+%\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
-\newcommand*{\help}[1]{\textcolor{green}{help: #1}}
-
-% \todo ist das gleiche wie \help nur für offene Aufgaben
-% \newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
+\newcommand*{\help}[1]{\todo[color=green!40]{#1}}
 
 % Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
