- Vorlesung vom 2008-11-19 - TODOs aufgeloest
git-svn-id: https://svn.lug-jena.de/uni-skripte@1917 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -60,6 +60,7 @@
 \usepackage{todonotes}
 \usepackage{pstricks}
 \usepackage{pst-node}
+\usepackage{xypic}
 
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
@@ -177,6 +178,8 @@
 \renewcommand*{\phi}{\varphi}
 
 \newcommand*{\K}{\mathbb{K}}
+
+\newcommand*{\CL}{\mathcal{L}}
 
 \DeclareMathOperator{\cl}{cl}
 \DeclareMathOperator{\spn}{span}
@@ -1620,17 +1623,19 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
       sie linear, d.\,h. für $\lambda, \mu\in\ell^{n}_{\infty}$ und $\alpha,
       \beta\in\K$ gilt, $T(\alpha\lambda+\beta\mu)= \alpha T\lambda+ \beta
       T\mu$. Für $T$ und $T^{-1}$ gelten folgende Ungleichungen:
-      \begin{enumerate}[(1)]
-       \item $m\norm{\lambda}_{\infty}\leq\norm{T\lambda}\leq
-	M\norm{\lambda}_{\infty}$ für $\lambda\in\ell^{n}_{\infty}$
-       \item $m\norm{T^{-1}x}_{\infty}\leq\norm{x}\leq
-	M\norm{T^{-1}x}_{\infty}$ für $x\in X$
-      \end{enumerate}\todo{umstellen auf gather}
+      \begin{gather}\label{eq:15-1}
+       m\norm{\lambda}_{\infty}\leq\norm{T\lambda}\leq
+	   M\norm{\lambda}_{\infty} \qquad\lambda\in\ell^{n}_{\infty}\\
+	\label{eq:15-2}
+       m\norm{T^{-1}x}_{\infty}\leq\norm{x}\leq	M\norm{T^{-1}x}_{\infty}\qquad
+	   x\in X
+      \end{gather}
       Wegen der Linearität von $T$ und $T^{-1}$ hat man die Abschätzungen
       \begin{gather}
-	\label{eq:15}
+	\label{eq:15-3}
 	   m\norm{\lambda-\mu}_{\infty}\leq\norm{T(\lambda-\mu)}=
 	   \norm{T\lambda- T\mu}\leq M\norm{\lambda-\mu}_{\infty}\\
+	\label{eq:15-4}
 	m\norm{T^{-1}x-T^{-1}y}= m\norm{T^{-1}(x-y)}\psi\norm{x-y}\leq
 	   M\norm{T^{-1}x- T^{-1}y}
       \end{gather}
@@ -1645,18 +1650,18 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
       dann kompakt, wenn $T^{-1}(K)$ kompakt ist. Ferner hat man: $K\subset X$
       ist genau dann  abgeschlossen und beschränkt, wenn $T^{-1}(K)$
       abgeschlossen und beschränkt ist. Die Aussage $K$ beschränkt
-      $\Leftrightarrow T^{-1}(K)$ beschränkt, folgt mit der Ungleichung
-      (2)\todo{Link einfuegen}. Die Aussage $K$ abgeschlossen $\Leftrightarrow
+      $\Leftrightarrow T^{-1}(K)$ beschränkt, folgt mit \autoref{eq:15-2}. Die
+      Aussage $K$ abgeschlossen $\Leftrightarrow
       T^{-1}(K)$ abgeschlossen, folgt aus der Tatsache, dass Urbilder
       abgeschlossener Mengen von stetigen Funktionen wieder abgeschlossen
       sind.
     \begin{enumerate}[(i)]
      \item $K$ kompakt $\Leftrightarrow T^{-1}(K)$ kompakt. Nach
       \autoref{satz:i.212} ist das genau dann der Fall, wenn $T^{-1}(K)$
-      abgeschlossen und beschränkt ist $\Leftrightarrow K$ abgeschlossen und
-      beschränkt.
-     \item Sei ($x_{n})\subset X$ eine Cauchyfolge. Dann folgt mit der
-      Ungleichung~(4)\todo{Link einfügen}, $(T^{-1} x_{n})$ ist Cauchyfolge in
+      abgeschlossen und beschränkt ist. Also genau dann, wenn $K$ abgeschlossen und
+      beschränkt ist.
+     \item Sei ($x_{n})\subset X$ eine Cauchyfolge. Dann folgt mit
+      \autoref{eq:15-4}, $(T^{-1} x_{n})$ ist Cauchyfolge in
       $\ell^{n}_{\infty}$. Da $\ell^{n}_{\infty}$ existiert ein
       $y\in\ell^{n}_{\infty}$ mit $T^{-1}x_{n}\rightarrow y\Rightarrow
       T(T^{-1} x_{n})=x_{n}\rightarrow Ty\in X$, d.\,h. $X$ ist vollständig.
@@ -1702,8 +1707,182 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
    \item Ist $Y=(\K,\abs{\cdot})$, so heißen die linearen Operatoren $T\colon
     X\rightarrow Y$ \highl[Funktional!lineares]{lineare Funktionale}. Man
     schreibt häufig $Tx$ statt $T(x)$.
+   \item Mit $N(T)\colon=\ker(T)\colon=\{x\in X\colon Tx=0\}$ wird der
+    \highl{Nullraum} oder  \highl{Kern} und mit $R(T)\colon=\{Tx\colon x\in
+    X\}$ wird der \highl{Bildraum} von $T$ bezeichnet.
   \end{enumerate}
 \end{defini}
+
+%Vorlesung vom 2008-11-19
+
+\begin{defini}
+  Ein linearer Operator $T\colon X\rightarrow Y$ von einem normierten Raum $X$
+  in einen normierten Raum $Y$ heißt genau dann
+  \highl{beschränkt}\index{Operator!beschränkter}, wenn
+  $\sup_{\norm{x}\leq1} \norm{Tx}<\infty$.
+\end{defini}
+
+\begin{bemerk}
+  \emph{Warnung}: $T$ ist nicht auf $X$ beschränkt, wenn $T\neq0$.
+\end{bemerk}
+
+%satz II.1.1
+\begin{satz}
+  Seien $X,Y$ normierte Räume und $T\colon X\rightarrow Y$ linear. Dann sind
+  äquivalent:
+  \begin{enumerate}[(i)]
+   \item Es exitiert eine Konstante $c\geq0$, so dass für alle $x\in X$ gilt:
+    $\norm{Tx}\leq c\norm{x}$.
+   \item $T$ ist gleichmäßig stetig.
+   \item $T$ ist in $x=0$ stetig.
+   \item $\norm{T}\colon=\sup_{\norm{x}\leq1} \norm{Tx}<\infty$
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(i)$\Rightarrow$(ii)] $\norm{Tx-Ty}= \norm{T(x-y)}\leq c\norm{x-y}$
+      Somit ist $T$ gleichmäßig stetig.
+     \item[(ii)$\Rightarrow$(iii)] klar
+     \item[(iii)$\Rightarrow$(iv)] Sei $\epsilon=1$. Dann exitiert ein
+      $\delta>0$ mit $\norm{x-0}\leq\delta\Rightarrow\norm{Tx-T0}\leq1$. Für
+      $x$ mit $\norm{x}\leq1$ gilt dann, dass $\norm{\delta x}\leq\delta$ und
+      somit $\norm{T(\delta x)}\leq1\Rightarrow\norm{\delta
+      Tx}\leq1\Rightarrow \norm{Tx}\leq\nicefrac{1}{\delta}\Rightarrow
+      \norm{T}\colon= \sup_{\norm{x}\leq1} \norm{Tx}<\infty$.
+     \item[(iv)$\Rightarrow$(i)] Für $x\in X$ ist
+      $\norm{\frac{x}{\norm{x}}}=1$. Also gilt, dass
+      $\norm{T(\frac{x}{\norm{x}})}\leq\norm{T}\Rightarrow \norm{Tx}\leq
+      \norm{T}\norm{x}=1$ für alle $x\in X$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die Äquivalenz von Stetigkeit und Beschränktheit eines linearen Operators
+  ist fundamental in der Theorie der linearen Operatoren.
+\end{bemerk}
+
+\begin{defini}
+  Sei $T\colon X\rightarrow Y$ ein beschränkter linearer Operator von einem
+  normierten Raum $X$ in einen normierten Raum $Y$. Die Zahl $\norm{T}$
+  definiert durch $\norm{T}\colon=\sup_{\norm{x}\leq1} \norm{Tx}$ heißt
+  \highl{Norm} des Operators $T$ oder kurz \highl{Operatorennorm}.
+\end{defini}
+
+\section{Der Raum $\CL(X,Y)$ der beschränkten linearen Operatoren}
+
+\begin{defini}
+  Seien $S,T\colon X\rightarrow Y$ lineare Operatoren von einem Vektorraum $X$
+  in einen Vektorraum $Y$ und $\alpha\in\K$ eine Zahl. Dann sind $S+T, \alpha
+  T\colon X\rightarrow Y$ durch $(S+T)x\colon=Sx+Tx$ bzw. $(\alpha
+  T)x\colon=\alpha (Tx)$ für $x\in X$ definiert.
+
+  Es gilt, dass $S+T, \alpha T$ wieder lineare Operatoren sind.
+
+  Der Raum $\CL_{0}(X,Y)\colon=\{T\colon X\rightarrow Y\colon T\text{
+  linear}\}$ ist wieder ein Vektorraum.
+
+  Seien $\CL(X,Y)\colon=\{T\colon X\rightarrow
+  Y\colon T\text{ beschränkter linearer Operator}\}$ sowie $X$ und $Y$
+  normierte Räume.
+\end{defini}
+
+%satz II.2.1
+\begin{satz}
+  \begin{enumerate}[(i)]
+   \item Die Menge $\CL(X,Y)$ wird mit $\norm{T}=\sup_{\norm{x}\leq1}
+    \norm{Tx}$ zu einem normierten Raum.
+   \item Ist der Bildraum ein Banachraum, so ist $\CL(X,Y)$ mit der
+    Operatorennorm ebenfalls ein Banachraum.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}[(i)]
+     \item 
+    \begin{enumerate}[1.Schr{i}tt]
+     \item Wir zeigen, dass $\CL(X,Y)$ ein Vektorraum ist: Wenn
+      $S,T\in\CL(X,Y)$ und $\alpha, \beta\in\K$ sind, dann muss $\alpha
+      S+\beta T\in\CL(X,Y)$. Es ist $\norm{(\alpha S+\beta T)x}= \norm{\alpha
+      Sx+ \beta Tx}\leq\norm{\alpha Sx}+ \norm{\beta Tx}\leq\abs{\alpha}
+      \norm{S} \norm{x}+ \abs{\beta} \norm{T}\norm{x}\leq
+      (\abs{\alpha}\norm{S} +\abs{\beta}\norm{T})\norm{x}$ Damit folgt die
+      Behauptung.
+     \item Es ist $\norm{T}=\sup_{\norm{x}\leq1} \norm{Tx}$ ist eine Norm auf
+      $\CL(X,Y)$. Immer gilt $\norm{T}\geq 0$ und wenn $\norm{T}=0\Rightarrow
+      \norm{Tx}\leq\norm{T} \norm{x}$. Also folgt für alle $x\in X$, dass
+      $\norm{Tx}=0$ und dann ist auch $Tx=0$. Somit ist $T$ der Nulloperator.
+
+      Es ist $\norm{\alpha Tx}= \abs{\alpha} \norm{Tx}\Rightarrow \norm{\alpha
+      T}= \abs{\alpha} \norm{T}$.
+
+      Die dritte Eigenschaft kommt von obigen Schritt für $\alpha=\beta=1$.
+    \end{enumerate}
+     \item Sei $Y$ ein Banachraum. Es ist zu zeigen, dass $\CL(X,Y)$ ein
+      Banachraum ist. Dazu sei $(T_{n})\subset\CL(X,Y)$ eine Cauchyfolge,
+      d.\,h. für $\epsilon>0$ gibt es ein $n_{\epsilon}\in\N$ und für alle
+      $m,n\geq n_{\epsilon}$ gilt $\norm{T_{m}-T_{n}}\leq\epsilon$. Also gilt
+      für alle $x\in X$ und für alle $m,n\geq n_{\epsilon}$ ist:
+      \begin{gather}
+	\label{eq:32}
+	   \norm{T_{m}x -T_{n}x}=
+	   \norm{(T_{m}-T_{n})x}\leq\norm{T_{m}-T_{n}}\norm{x}\leq
+	   \epsilon\norm{x}
+      \end{gather}
+      d.\,h. $T_{n})\subset Y$ ist eine Cauchyfolge in $Y$.
+      Da $Y$ ein Banachraum, konvergiert $(T_{n}x)$ für jedes $x$. Nun
+      definieren wir einen Operator $T\colon X\rightarrow Y$ durch folgenden
+      Ansatz: $Tx\colon=\lim T_{n}x$ für $x\in X$.
+
+      Wir müssen zeigen, dass $T\in\CL(X,Y)$ und $\lim T_{n}=T$. Für $x,y\in
+      X$ und $\alpha, \beta\in\K$ gilt: $T(\alpha x+\beta y)= \lim
+      T_{n}(\alpha x+\beta y)= \lim(\alpha T_{n}x+ \beta T_{n}y)= \alpha\lim
+      T_{n}x+ \beta\lim T_{n}y= \alpha Tx+\beta Ty$. Damit ist $T$ linear.
+
+      Für $x\in X$ gilt die Aussage, dass $Tx-T_{n}x=\lim T_{m}x-T_{n}x= \lim
+      (T_{m}x-T_{n}x)\Rightarrow\norm{Tx-T_{n}x}= \lim\norm{T_{m}x- T_{n}x}$.
+      Wegen \autoref{eq:32} folgt, dass $\norm{Tx-T_{n}x}\leq\epsilon\norm{x}$
+      für $x\in X$. Diese Aussage impliziert, dass
+      $\norm{T-T_{n}}\leq\epsilon$ für $n\geq n_{\epsilon}$ und $\norm{Tx}=
+      \norm{T_{n_{\epsilon}} x+ (T-T_{n_{\epsilon}}) x}\leq
+      \norm{T_{n_{\epsilon}} x}+ \norm{(T-T_{n_{\epsilon}})
+      x}\leq\norm{T_{n_{\epsilon}}} \norm{x}+ \norm{T-T_{n_{\epsilon}}}
+      \norm{x}= (\norm{T_{n_{\epsilon}}} +\epsilon)\norm{x}$. Also ist
+      $\norm{T}\leq\norm{T_{n_{\epsilon}}}+\epsilon<\infty$, d.\,h.
+      $T\in\CL(X,Y)$ und $\lim T_{n}=T$. Damit ist $(T_{n})$ eine konvergente
+      Folge in $\CL(X,Y)$. Also ist $\CL(X,Y)$ ein Banachraum.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{defini}
+  Seien $S\colon X\rightarrow Y$ und $T\colon Y\rightarrow Z$ lineare
+  Operatoren zwischen den Vektorräumen $X$ und $Y$ bzw. $Y$ und $Z$. Der
+  \highl{Produktoperator} (oder \highl{Komposition}) $TS\colon X\rightarrow Z$
+  ist definiert durch $(TS)x=T(Sx)$.
+  \begin{gather*}
+    \xymatrix{X \ar[rr]|{TS} \ar[dr]|S & & Z\\
+     & Y\ar[ur]|T & }
+  \end{gather*}
+\end{defini}
+
+%lem II.2.2
+\begin{lem}
+  Für normierte Räume $X,Y,Z$ und Operatoren $S\in\CL(X,Y), T\in\CL(Y,Z)$
+  gilt, $TS\in\CL(X,Z)$ und $\norm{TS}\leq\norm{T}\norm{S}$.
+  \begin{proof}
+    Die Linearität von $TS$ ist klar. Für die Beschränktheit sei $x\in X$ und
+    es gilt $\norm{(TS)x}= \norm{T(Sx)}\leq\norm{T} \norm{Sx}\leq\norm{T}
+    \norm{S} \norm{x}$ und $\norm{TS}\leq\norm{T}\norm{S}$.
+  \end{proof}
+\end{lem}
+
+
+
+\begin{bemerk}
+  Für $Y\colon=[\K, \abs{\cdot}]$ heißen die linearen Operatoren beschränkte
+  lineare \highl{Funktionale}\index{Funktional!beschränktes lineares}. Wir
+  schreiben $X'\colon=\CL(X,\K)$ \highl[Banachraum!dualer]{dualer Banachraum}
+  von $X$. Der duale Raum $X'$ ist stets ein Banachraum.
+\end{bemerk}
+
 
 \clearpage
 \appendix
@@ -1745,6 +1924,39 @@ x+y\colon=(\xi_{i}+\eta_{i})$ und $\lambda x\colon=(\lambda\xi_{i})$ für $\lamb
   nicht separabel ist.
 \end{enumerate}
 
+\section{Aufgaben zu Operatoren}
+
+\begin{enumerate}[{A}ufg{a}be 1]
+ \item Es gilt $\norm{T}=\sup_{\norm{x}<1} \norm{Tx}= \sup_{\norm{x}=1}
+  \norm{Tx}= \sup_{x\neq0} \frac{\norm{Tx}}{\norm{x}}=\inf\{c\geq0\colon
+  \forall x\in X\colon\norm{Tx}\leq c\norm{x}\}$.\\
+  Sei $\alpha\colon=\sup_{\norm{x}<1} \norm{Tx}$. Es ist klar, dass
+  $\norm{T}\geq\alpha$ gilt. Sei nun $\epsilon>0$ und $x\in X$ beliebig. Dann
+  ist $\frac{1}{\norm{x}+\epsilon} \norm{Tx}=
+  \norm{T(\frac{x}{\norm{x}+\epsilon})}\leq \alpha\Rightarrow \norm{Tx}\leq
+  \alpha(\norm{x}+\epsilon)\xrightarrow{\epsilon\rightarrow0}
+  \alpha\norm{x}\Rightarrow \norm{Tx}\leq\alpha\norm{x}\Rightarrow
+  \norm{T}\leq\alpha$.
+
+  Sei nun $\beta\colon=\sup_{\norm{x}=1} \norm{Tx}$. Dann ist
+  $\norm{\frac{x}{\norm{x}}}=1$  und es folgt,
+  $\norm{T(\frac{x}{\norm{x}})}\leq \beta\Rightarrow\norm{Tx}\leq\beta
+  \norm{x}$ für alle $x\in X$. Also folgt, dass $\norm{T}\leq\beta$.
+
+  Sei $\gamma\colon=\sup_{x\neq0} \frac{\norm{Tx}}{\norm{x}}\Rightarrow
+  \norm{Tx}\leq \gamma\norm{x}$ für alle $x\in X$. Also ist
+  $\norm{T}\leq\gamma$. Für $\norm{T}\geq\gamma$ existiert ein $\epsilon>0$
+  beliebig und es existiert ein $x_{\epsilon}\neq0$ mit $\gamma-\epsilon\leq
+  \frac{\norm{Tx_{\epsilon}}}{\norm{x_{\epsilon}}}
+  =\norm{T(\frac{x_{\epsilon}}{\norm{x_{\epsilon}}})} \leq\norm{T}\Rightarrow
+  \norm{T}\geq\gamma-\epsilon\Rightarrow\norm{T}\geq\gamma$ für
+  $\epsilon\rightarrow0$.
+
+  Sei $A\colon=\inf\{c\geq0\colon\forall x\in X\colon\norm{Tx}\leq
+  c\norm{x}\}$ und $c>A$. Dann gilt für alle $x\in X$: $\norm{Tx}\leq
+  c\norm{x}\Rightarrow\norm{T}\leq c\Rightarrow\norm{T}\leq A$. Wegen
+  $\norm{Tx}\leq\norm{T} \norm{x}$ folgt, dass $A\leq\norm{T}$.
+\end{enumerate}
 
 \begin{thebibliography}{99}
  \bibitem{werner04} D.\,Werner. Funktionalanalysis. Springer 2004
