Dritte Uebungsserie eingepflegt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1927 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1858,6 +1858,106 @@ $l\leq k$.
   \end{enumerate}
 \end{enumerate}
 
+\section{Serie 3: Produkträume, Erzeugungsprinzipien, Trennung und
+  Zusammenhang, Kompaktheit}
+
+\begin{enumerate}[Aufg{a}be~1]
+ \item
+  \begin{enumerate}[(a)]
+   \item Für zwei topologische Räume $(X_{i}, \CT_{i})$ mit $i=1,2$ sei
+    \begin{gather*}
+      \CB=\{G_{1}\times G_{2}\colon G_{i}\in\CT_{i}, i=1,2\}
+    \end{gather*}
+    Man zeige, dass $\CB$ (endlich) durchschnittsabgeschlossen sei.
+
+    Seien allgemeiner $(X_{i}, \CT_{i}), i\in I$ topologische Räume. Dabei ist
+    $I$ eine allgemeine Indexmenge. Weiter sei $X=\prod_{i\in I} X_{i}$ und
+    $\pi_{i}\colon X\rightarrow X_{i}, i\in I$ die Projektion. Die
+    Produkttopologie $(X,\CT)$ wird dann festgelegt durch die Basis
+    \begin{gather*}
+      \CB=\left\{\bigcap_{k\in K} \pi^{-1}(U_{k})\colon U_{k}\in \CT_{k}, K
+	 \text{ endliche Indexmenge von } I\right\}
+    \end{gather*}
+   \item Seien zusätzlich $X_{i}\neq\emptyset, i\in I$. Man verifiziere dann:
+    Falls $U\subset X$ offen in $\CT$ ist, dann ist $\pi_{i}(U)=X_{i}$ für
+    alle außer endlich vielen $i\in I$.
+   \item Seien $A_{i}\subset X_{i}, i\in I$. Man weise nach, dass
+    $\overline{\prod_{i\in I} A_{i}}= \prod_{i\in I} \overline{A_{i}}$ gilt.
+  \end{enumerate}
+ \item
+  \begin{enumerate}[(a)]
+   \item Sei $X\neq\emptyset, I\neq\emptyset$ eine beliebige Indexmenge,
+    $(X_{i}, \CT_{i})_{i\in I}$ eine Familie topologischer Räume und
+    $(f_{i})_{i\in I}$ eine Familie von Abbildungen $f_{i}\colon
+    X_{i}\rightarrow X$.\\
+    Man zeige: Auf $X$ existiert eine eindeutig bestimmte Topologie $\CT$,
+    sodass für einen beliebigen topologischen Raum $Y$ eine beliebige
+    Abbildung $g\colon X\rightarrow Y$ genau dann stetig ist, wenn $g\circ
+    f_{i}\colon X_{i}\rightarrow Y$ stetig ist für jedes $i\in I$. Ferner
+    zeige man, dass $\CT$ dann aus Mengen der Form $\bigcap_{i\in I}
+    \{U\subset X\colon f_{i}^{-1}(U)\in\CT_{i}\}$ besteht.
+
+    Falls $X$ ein topologischer Raum ist, $\sim$ eine Äquivalenzrelation auf
+    $X$ und $\pi\colon X\rightarrow X/_{\sim}$ die kanonische Projektion, so
+    bezeichne $\CT/_{\sim}$ die nach (a) existierende Topologie (d.\,h.
+    $g\colon X/_{\sim}\rightarrow Y$ stetig, genau dann wenn, $g\circ\pi\colon
+    X\rightarrow Y$ stetig)
+   \item Auf $\R$ sei die Äquivalenzrelation $\sim_{\Q}$ gegeben durch
+    $x\sim_{\Q}y\Leftrightarrow x-y\in\Q$. Welche Topologie trägt der Raum
+    $\R/_{\sim_{\Q}}$?
+  \end{enumerate}
+ \item
+  \begin{enumerate}[(a)]
+   \item Sei $X\neq\emptyset, I\neq\emptyset$ eine beliebige Indexmenge,
+    $(X_{i}, \CT_{i})_{i\in I}$ eine Familie topologischer Räume und
+    $(f_{i})_{i\in I}$ eine Familie von Abbildungen $f_{i}\colon X\rightarrow
+    X_{i}$.\\
+    Man zeige: Auf $X$ existiert eine eindeutig bestimmte Topologie $\CT$,
+    sodass für einen beliebigen topologischen Raum $Y$ eine beliebige
+    Abbildung $g\colon Y\rightarrow X$ genau dann stetig, wenn $f_{i}\circ
+    g\colon Y\rightarrow X_{i}$ stteig ist für jedes $i\in I$. Man weise nach,
+    dass diese Topologie $\CT$ von dem System $\CS=\{A\in\FP(X)\colon \exists
+    i_{0}\in I, U_{i_{0}}\in\CT_{i_{0}} \text{ sodass }
+    A=f^{-1}_{i_{0}}(U_{i_{0}})\}$ erzeugt wird. (Hier bezeichnet
+    $f^{-1}_{i_{0}}(U_{i_{0}})$ das Urbild von $U_{i_{0}}$ unter $f_{i_{0}}$.)
+   \item Sei nun $(Y,\CT)$ ein (beliebiger) topologischer Raum, $A\subset Y$
+    und $\iota\colon A\rightarrow Y$ gegeben durch $\iota(y)= y, y\in A$.
+    Welche Topologie auf $A$ ergibt sich, wenn man das Konstruktionsprinzip
+    aus (a) anwendet auf die einelementige Familie von Abbildungen $\{\iota\}$?
+  \end{enumerate}
+ \item Man beweise folgende Aussagen:
+  \begin{enumerate}[(a)]
+   \item Ein topologischer Raum $X$ erfüllt das $T_{0}$"~Axiom genau dann,
+    wenn für alle $x,y\in X$ mit $x\neq y$ stets $\overline{\{x\}}\neq
+    \overline{\{y\}}$ gilt.
+   \item Die diskrete Topologie ist die einzige $T_{1}$"~Topologie auf einer
+    endlichen Menge.
+   \item Eine unendliche Menge $X$, versehen mit der cofiniten Topologie ist
+    ein $T_{1}$"~Raum, aber kein $T_{2}$"~Raum (\textsc{Hausdorff}-Raum).
+   \item Ebenso erfüllt die \textsc{Zariski}"~Topologie auf $\C^{n}$ das
+    $T_{1}$"~Axiom, nicht aber $T_{2}$.
+   \item Eine Menge $A\subset\R$ ist genau dann zusammenhängend, wenn $A$ ein
+    Intervall ist.
+   \item Falls die Abbildung $f\colon X\rightarrow Y$ zwischen zwei
+    topologischen Räumen $X$ und $Y$ stetig und surjektiv ist und $X$
+    zusammenhängend, so ist auch $Y$ zusammenhängend.
+  \end{enumerate}
+ \item
+  \begin{enumerate}[(a)]
+   \item Man gebe ein Beispiel an für eine Menge, die kompakt, jedoch nicht
+    abgeschlossen ist.
+   \item Sei $X$ ein \textsc{Hausdorff}"~Raum, $U$ eine offene Teilmenge von
+    $X$ und $\CA$ eine Familie kompakter Teilmengen von $X$ derart, dass
+    $\bigcap_{A\in\CA} A\subset U$. Man verifiziere, dass dann eine endliche
+    Teilfamilie $\CB \subset\CA$ existiert mit $\bigcap_{A\in\CB} \subset
+    U$\todo{Fehlt dan nicht nach dem $\bigcap$ was?}.
+   \item Man zeige: Seien $X$ ein \textsc{Hausdorff}"~Raum und $Y$ ein
+    kompakter Raum. Dann ist die Projektion $\pi\colon X\times Y\rightarrow X$
+    eine abgeschlossene Abbildung.
+   \item Man weise nach: In einem \textsc{Hausdorff}"~Raum ist ein beliebiger
+    Durchschnitt kompakter Mengen wieder kompakt.
+  \end{enumerate}
+\end{enumerate}
 
 
 \begin{thebibliography}{99}
